Actions
Bug #13607
closedloader: tem should use dynamic array for tab stops
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
The current tabstops are stored in fixed size array of 40 stops, this means max terminal width 8 * 40. With small font and high-resolution display, we will overflow tab stops array and corrupt memory.
(re)allocate array, based on terminal width, when terminal is re-initialized.
Testing done: build/install/boot
Updated by Electric Monk about 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ba2848d4cb17292e88f04f6a47e0b3305f17efa7
commit ba2848d4cb17292e88f04f6a47e0b3305f17efa7 Author: Toomas Soome <tsoome@me.com> Date: 2021-03-12T07:01:35.000Z 13607 loader: tem should use dynamic array for tab stops Reviewed by: Yuri Pankov <yuripv@yuripv.dev> Approved by: Dan McDonald <danmcd@joyent.com>
Actions